--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -1,21 +1,84 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
+@keyframes dropdown {
+    0% {
+      transform: rotateX(-90deg)
+    }
+    70% {
+      transform: rotateX(20deg)
+    }
+    100% {
+      transform: rotateX(0deg)
+    }
+}
+
 #body {
-    width: 500px;
-    height: 300px;
+    width: 700px;
+    height: 360px;
     background-color: rgb(197, 197, 197);
     border-style: outset;
     border-width: 10px;
     border-color: gray;
     font-family: 'Roboto Mono', monospace;
     font-weight: 400;
-    align-content: center;
 }
+
+.dropdown {
+	padding: 10px;
+	padding-bottom: 5px;
+	position: relative;
+	display: inline-block;
+	transform: none;
+	transition-duration: 0.4s;
+	transition-timing-function: ease-in-out;
+}
+
+.dropdown-content a {
+	font-family: "Roboto Mono";
+	font-size: 12pt;
+	text-shadow: 0px 0px 5px rgba(255, 255, 255, 1);
+    color:rgb(0, 14, 90);
+	color: black;
+	padding: 12px 16px;
+	display: block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color:rgba(228,231,244,1.00);
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+    animation: dropdown 300ms ease-in-out forwards;
+    transform-origin: top center;
+}
+
+.dropdown-content a {
+	background-color:rgba(232,234,244,1.00);
+	transform: none;
+	transition-duration: 0.4s;
+	text-decoration: none;
+}
+
+.dropdown-wrapper {
+	width: 60px;
+	height: 60px;
+	cursor: pointer;
+}
+
+.dropdown-wrapper:hover .dropdown-content {display: block;}
+
+.dropdown-wrapper:hover .dropdown {transform: scale(1.05); box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);}
+
+.dropdown-content a:hover {transform: scale(0.96);}
 
 #title {
     text-align: center;
     color:rgb(0, 14, 90);
+	padding-left: 10px;
+	padding-rigt: 10px;
+	padding-top: 0px;
 }
 
 #subtitle {
